--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,22 +2,22 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/jiraservicedesk.stakater.com_projects.yaml
 - bases/jiraservicedesk.stakater.com_customers.yaml
-# +kubebuilder:scaffold:crdkustomizeresource
+- bases/jiraservicedesk.stakater.com_projects.yaml
+#+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-- patches/webhook_in_projects.yaml
-- patches/webhook_in_customers.yaml
-# +kubebuilder:scaffold:crdkustomizewebhookpatch
+#- patches/webhook_in_customers.yaml
+#- patches/webhook_in_projects.yaml
+#+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-- patches/cainjection_in_projects.yaml
-- patches/cainjection_in_customers.yaml
-# +kubebuilder:scaffold:crdkustomizecainjectionpatch
+#- patches/cainjection_in_customers.yaml
+#- patches/cainjection_in_projects.yaml
+#+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
