--- a/config/samples/jiraservicedesk_v1alpha1_customer.yaml
+++ b/config/samples/jiraservicedesk_v1alpha1_customer.yaml
@@ -1,11 +1,7 @@
 apiVersion: jiraservicedesk.stakater.com/v1alpha1
 kind: Customer
 metadata:
-  name: customer
+  name: customer-sample
 spec:
-  name: testCustomer
-  email: testCustomer@test.com
-  projects:
-    - KEY1
-    - KEY2
-    - KEY3
+  # Add fields here
+  foo: bar
