--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,6 +7,13 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+- apiGroups:
   - jiraservicedesk.stakater.com
   resources:
   - customers
@@ -18,12 +25,6 @@ rules:
   - patch
   - update
   - watch
-- apiGroups:
-  - jiraservicedesk.stakater.com
-  resources:
-  - customers/finalizers
-  verbs:
-  - update
 - apiGroups:
   - jiraservicedesk.stakater.com
   resources:
@@ -44,12 +45,6 @@ rules:
   - patch
   - update
   - watch
-- apiGroups:
-  - jiraservicedesk.stakater.com
-  resources:
-  - projects/finalizers
-  verbs:
-  - update
 - apiGroups:
   - jiraservicedesk.stakater.com
   resources:
