--- a/charts/jira-service-desk-operator/templates/deployment.yaml
+++ b/charts/jira-service-desk-operator/templates/deployment.yaml
@@ -54,7 +54,22 @@ spec:
           value: "{{ default true .Values.webhook.enabled }}"
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        securityContext:
+          allowPrivilegeEscalation: false
         name: manager
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8081
+          initialDelaySeconds: 15
+          periodSeconds: 20
+        name: manager
+        readinessProbe:
+          httpGet:
+            path: /readyz
+            port: 8081
+          initialDelaySeconds: 5
+          periodSeconds: 10
         ports:
         - containerPort: 9443
           name: webhook-server
