--- a/charts/jira-service-desk-operator/templates/certificate.yaml
+++ b/charts/jira-service-desk-operator/templates/certificate.yaml
@@ -4,7 +4,7 @@
     {{- fail "cert-manager is not installed" }}
 {{ end }}
 ---
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: {{ include "jira-service-desk-operator.fullname" . }}-selfsigned-issuer
@@ -12,7 +12,7 @@ metadata:
 spec:
   selfSigned: {}
 ---
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: {{ include "jira-service-desk-operator.fullname" . }}-serving-cert
