--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -57,7 +57,7 @@ jobs:
       run: |
         kubectl cluster-info
         kubectl create namespace test
-        echo "${{ secrets.SECRET_KUBERNETES_RESOURCES }}"> kube.yaml
+        echo "${{ JIRA_SERVICE_DESK_CONFIG }}"> kube.yaml
         kubectl apply -f kube.yaml
         rm -f kube.yaml
         
