--- a/bundle/manifests/jira-service-desk-operator-webhook-service_v1_service.yaml
+++ b/bundle/manifests/jira-service-desk-operator-webhook-service_v1_service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: jira-service-desk-operator-webhook-service
 spec:
   ports:
-  - port: 443
+  - protocol: TCP
     targetPort: 9443
   selector:
     control-plane: controller-manager
