--- a/charts/jira-service-desk-operator/templates/deployment.yaml
+++ b/charts/jira-service-desk-operator/templates/deployment.yaml
@@ -38,7 +38,7 @@ spec:
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         name: kube-rbac-proxy
         ports:
-        - containerPort: 8443
+        - protocol: TCP
           name: https
       - args:
         - --health-probe-bind-address=:8081
