Update operator-sdk to v1.16.0

--- a/charts/jira-service-desk-operator/templates/deployment.yaml
+++ b/charts/jira-service-desk-operator/templates/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     metadata:
       {{- with .Values.podAnnotations }}
       annotations:
-        {{- toYaml . | nindent 8 }}
+        kubectl.kubernetes.io/default-container: manager
       {{- end }}
       labels:
         {{- include "jira-service-desk-operator.selectorLabels" . | nindent 8 }}
