--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -21,6 +21,8 @@ spec:
     metadata:
       labels:
         control-plane: controller-manager
+      annotations:
+        kubectl.kubernetes.io/default-container: manager
     spec:
       securityContext:
         runAsNonRoot: true
@@ -46,11 +48,11 @@ spec:
           initialDelaySeconds: 5
           periodSeconds: 10
         resources:
-          limits:
-            cpu: 200m
-            memory: 100Mi
-          requests:
-            cpu: 100m
-            memory: 20Mi
+            limits:
+              cpu: 500m
+              memory: 768Mi
+            requests:
+              cpu: 10m
+              memory: 256Mi
       serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
