Update service ports

--- a/config/default/manager_auth_proxy_patch.yaml
+++ b/config/default/manager_auth_proxy_patch.yaml
@@ -24,7 +24,8 @@ spec:
         - "--logtostderr=true"
         - "--v=0"
         ports:
-        - protocol: TCP
+        - containerPort: 8443
+          protocol: TCP
           name: https
       - name: manager
         args:
