--- a/charts/jira-service-desk-operator/templates/deployment.yaml
+++ b/charts/jira-service-desk-operator/templates/deployment.yaml
@@ -39,6 +39,7 @@ spec:
         name: kube-rbac-proxy
         ports:
         - protocol: TCP
+          containerPort: 8443
           name: https
       - args:
         - --health-probe-bind-address=:8081
@@ -74,7 +75,7 @@ spec:
         ports:
         - containerPort: 9443
           name: webhook-server
-          protocol: TCP
+          port: 443
         resources:
           {{- toYaml .Values.resources | nindent 12 }}
         volumeMounts:
