--- a/config/webhook/service.yaml
+++ b/config/webhook/service.yaml
@@ -6,7 +6,8 @@ metadata:
   namespace: system
 spec:
   ports:
-    - protocol: TCP
+    - port: 443
+      protocol: TCP
       targetPort: 9443
   selector:
     control-plane: controller-manager
