--- a/charts/jira-service-desk-operator/templates/mutating-webhook.yaml
+++ b/charts/jira-service-desk-operator/templates/mutating-webhook.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.webhook.enabled -}}
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   annotations:
@@ -8,8 +8,9 @@ metadata:
   creationTimestamp: null
   name: {{ include "jira-service-desk-operator.fullname" . }}-mutating-webhook-configuration
 webhooks:
-- clientConfig:
-    caBundle: Cg==
+- admissionReviewVersions:
+  - v1
+  clientConfig:
     service:
       name: {{ include "jira-service-desk-operator.fullname" . }}-webhook-service
       namespace: {{ .Release.Namespace }}
@@ -26,8 +27,10 @@ webhooks:
     - UPDATE
     resources:
     - customers
-- clientConfig:
-    caBundle: Cg==
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
     service:
       name: {{ include "jira-service-desk-operator.fullname" . }}-webhook-service
       namespace: {{ .Release.Namespace }}
@@ -44,4 +47,5 @@ webhooks:
     - UPDATE
     resources:
     - projects
+  sideEffects: None
 {{- end -}}
